2013-07-23  Charlie Zender  <zender@uci.edu>

	* ncatted: Works with single NC_STRING's (previous versions of
	ncatted completely and utterly fail with NC_STRING).

	* ncatted: Fix ambigous interpretation of type specifications

	* ncatted: Clarify netCDF4 atomic type specifications

	* CDL mode prefix NC_STRING attributes with "string "

	* CDL mode add double quotes to printing NC_STRING attributes

2013-07-22  Charlie Zender  <zender@uci.edu>

	* Add ncrename stubs and docs for libnetcdf version of nc_rename_grp()

2013-07-22 Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_trv_msa() Update dimension with hyperslabed size

	* nco_dmn_trv_msa_tbl() Update all GTT dimensions with hyperslabed size

	* nco_dmn_msa_tbl() Update GTT dimension with hyperslabed size

	* nco_prn_var_dfn() Print variable metadata; modified to use hyperslabed sizes

2013-07-19  Charlie Zender  <zender@uci.edu>

	* XML mode (with --xml) prints all test cases at least as well as ncdump -x

	* NCO 4.3.3 release procedure:
 	Changes since nco-4_3_2: -X aux, ncflint/ncpdq -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_3;cvs tag -d nco-4_3_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.3 release"
	cvs tag -c nco-4_3_3;cvs tag -c nco-4_3_3-1

	* Fix bad memory dereference in nco_prn_var_val_trv()

2013-07-19  Henry Butowsky  <henryb@hush.com>

        * Added custom masking function for 2D vars:
	mask_out=imask_make(var_in,lat,lon)
	mask_out is a 0/1 mask of grid points whose value in var_in is missng_value but
	have an adjacent neighbour whose value is NOT missing
        var_out=imask_fill(var_in.mask_out,lat,lon)
        Points in var_in are filled if they are missing AND are specified in mask_out.
        Fill value is average of nearest neigbours in input, but if neighbour was
	just been filled then its value is NOT used in the calculation of the average.

2013-07-18 Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_avg_tbl() Transfer averaged dimensions information into GTT (-a for ncwa)
